--- a/web/src/index.css
+++ b/web/src/index.css
@@ -44,14 +44,11 @@ code {
 }
 
 ::-webkit-scrollbar {
-  width: 4px;
-}
-
-::-webkit-scrollbar-thumb {
-  background: radial-gradient(50% 50% at 50% 50%, #ed5007 0%, #ed5007 90%);
-  background-position: right center; /* Move the background to the right */
-  border-radius: 14px;
-
+  background-color: transparent;
+  padding: 0;
+  margin: 0;
+  width: 0;
+  height: 0;
 }
 
 .toast-inform {
